--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,9 +6,10 @@ android {
         applicationId "com.soundboards.alexanderpowell.ericandresoundboard"
         minSdkVersion 21
         targetSdkVersion 26
-        versionCode 21
-        versionName "2.1"
+        versionCode 22
+        versionName "2.2"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        multiDexEnabled true // add this to enable multi-dex
     }
     buildTypes {
         release {
@@ -31,4 +32,5 @@ dependencies {
     compile 'com.google.firebase:firebase-ads:11.8.0'
     compile 'com.inmobi.monetization:inmobi-ads:7.0.2'
     compile 'com.google.android.gms:play-services:11.8.0'
+    compile 'com.android.support:multidex:1.0.1'
 }
